# vectorbase

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  Makefile.in  README.md  configure  gy.data  rustc-ice-2024-10-14T08_49_58-648451.txt  rustc-ice-2024-10-14T08_49_58-648452.txt
data/my_index/: gy.data  meta.json
data1/my_index/: meta.json
data2/my_index/: meta.json
embed/: Cargo.toml
embed/src/: error.rs  image.rs  lib.rs
example/: Cargo.toml  Makefile  example_datatable.c
example/asyncio/: Cargo.toml
example/asyncio/src/: main.rs
example/base/: Cargo.toml
example/base/src/: main.rs
example/disk/: Cargo.toml
example/disk/data/my_index/: data.gy  meta.json
example/disk/src/: main.rs
example/embed/: Cargo.toml
example/embed/model/models--Qdrant--all-MiniLM-L6-v2-onnx/refs/: main
example/embed/model/models--Qdrant--all-MiniLM-L6-v2-onnx/snapshots/2594acda6dd8a53ad373b3d19ff9b71fb78ec43e/: config.json  model.onnx  special_tokens_map.json  tokenizer.json  tokenizer_config.json
example/embed/src/: lib.rs  main.rs
example/hnsw/: Cargo.toml
example/hnsw/src/: main.rs
example/hnsw2/: Cargo.toml
example/hnsw2/src/: main.rs
example/reopen/: Cargo.toml
example/reopen/src/: main.rs
example/simple/: Cargo.toml
example/simple/src/: main.rs
example/src/: embed.rs  main.rs
hnsw/: Cargo.toml
hnsw/src/: lib.rs
pgvectorbase/: Cargo.toml  pgvectorbase.control
pgvectorbase/pg_regress/expected/: setup.out
pgvectorbase/src/: datatype.rs  error.rs  lib.rs
pgvectorbase/src/hnsw/: build.rs  hnsw.rs  insert.rs  mod.rs  option.rs  util.rs
pgvectorbase/src/sql/: op_class.sql  tensor_type.sql
src/: Makefile  block.rs  buffer.rs  cache.rs  catalog.c  catalog.h  collection.rs  compaction.rs  config.rs  datatable.c  datatable.h  db.h  del.rs  disk.rs  diskann.h  executor.h  fs.h  hash.c  hash.h  index.h  interface.h  lib.rs  lock.c  lock.h  macros.rs  memory.rs  operator.c  operator.h  parser.c  parser.h  planner.h  query.rs  schema.rs  searcher.rs  segment.c  segment.h  sql.rs  storage.c  storage.h  store.c  (+17 more)
src/ann/: annoy.rs  flat.rs  hnsw.rs  hnsw2.rs  ivfflat.rs  mod.rs  pq.rs
src/embed/: image.rs
src/gypaetus/: buffer.rs  collect.rs  disk.rs  macros.rs  mod.rs  query.rs  schema.rs  searcher.rs  wal.rs
src/gypaetus/ann/: annoy.rs  hnsw.rs  lsh.rs  mod.rs  pq.rs
src/gypaetus/util/: bitmap.rs  bloom.rs  common.rs  error.rs  fs.rs  fst.rs  mod.rs  time.rs
src/knn/: hnsw.rs  mod.rs
src/memory/: mem.rs  mod.rs
src/schema/: document.rs  field.rs  mod.rs
src/storage/: meshstore.rs  mod.rs  page.rs  traker.rs
src/util/: asyncio.rs  bloom.rs  bytes.rs  cache.rs  common.rs  error.rs  fs.rs  fst.rs  index.rs  mod.rs  time.rs
src/wal/: mod.rs  options.rs  segment.rs  wal.rs
tests/: Cargo.toml  Makefile  test_catalog.c  test_checkpointManager.c  test_datatable.c  test_emb_heap_table.c  test_extends.c  test_file.c  test_file_buffer.c  test_generic.c  test_hash.c  test_interface.c  test_realloc_behavior.c  test_storage.c  test_value_vs_pointer.c  test_vector.c  test_vectorbase.c  test_vtable.c  test_vtable_simple.c
tests/src/: embed.rs  main.rs
