[package]
name = "pgvectorbase"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pgvectorbase"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx = "=0.16.0"
wwml =  {path = "../../wwml",features = ["cpu"]}
serde_json = "1.0.122"
serde = {version= "1.0.219", features = ["derive"] }
serde_bytes = "0.11"
byteorder = "=1.5.0"
thiserror = "1.0"

[dev-dependencies]  
pgrx-tests = "=0.16.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
