[package]
name = "embed"
version = "0.1.0"
edition = "2021"

[dependencies]
fastembed = {path = "../../../rust-lib/fastembed-rs", version = "4.1.0", features = ["default"]}
vectorbase = {path = "../../", version = "0.0.1"}
galois = {path = "../../../galois", version = "0.1.0"}
tokio = {version ="1.40.0",features = ["full"]}