[package]
name = "hnsw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hnsw = "0.11.0"
space = { version = "0.17.0", default-features = false, features = ["alloc"] }
rand = "0.8.5"

[lib]
name = "hnsw"
